# NyaDeskPetAPP

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
androidApp/: build.gradle.kts
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/kotlin/com/gameswu/nyadeskpet/: MainActivity.kt
androidApp/src/main/res/values/: strings.xml
androidApp/src/main/res/xml/: file_paths.xml
composeApp/: build.gradle.kts
composeApp/src/androidMain/assets/models/live2d/mao_pro_zh/runtime/: param-map.json
composeApp/src/androidMain/cpp/: CMakeLists.txt  live2d_native.cpp  stb_impl.c
composeApp/src/androidMain/kotlin/com/gameswu/nyadeskpet/: MainActivity.kt  NyaDeskPetApp.kt  Platform.android.kt
composeApp/src/androidMain/kotlin/com/gameswu/nyadeskpet/audio/: AudioStreamPlayer.kt
composeApp/src/androidMain/kotlin/com/gameswu/nyadeskpet/data/: ConversationStorage.kt  LogManager.kt  (+4 more)
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/kotlin/com/gameswu/nyadeskpet/: App.kt  Greeting.kt  Platform.kt
composeApp/src/commonTest/kotlin/com/gameswu/nyadeskpet/: ComposeAppCommonTest.kt
composeApp/src/iosMain/kotlin/com/gameswu/nyadeskpet/: MainViewController.kt  Platform.ios.kt
composeApp/src/nativeInterop/cinterop/: live2d.def
composeApp/src/nativeInterop/cinterop/live2d/: live2DBridge.cpp  stb_impl_ios.c
composeApp/src/nativeInterop/cinterop/live2d/include/: Live2DBridge.h
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
(+101 files in other folders)
